temporary fix to MUSEUM OF CANDY website and helping out other people on stack overflow

--- a/bootstrap_flexbox/bootstrap_fb_106/app.css
+++ b/bootstrap_flexbox/bootstrap_fb_106/app.css
@@ -1,6 +1,14 @@
+html {
+    /* temporary fix for overflow content */
+    overflow-x: hidden;
+}
+
 body {
     background: #f5d9d5;
     font-family: "Nunito", san-serif;
+    /* width: 100%;
+    height: 100%;
+    margin: 0; */
 }
 
 .blurb h2 {
